--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -17,11 +17,30 @@ body {
 
   /* Full height */
   height: 100%;
+  min-height: 1011px;
   width: auto;
 
   /* Center and scale the image nicely */
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
+  background-size: cover;
+    
+}
+.landing-body2{
+  background-image: url("../img/landing-bg.jpg");
+
+  /* Add the blur effect */
+  filter: blur(4px);
+  -webkit-filter: blur(4px);
+
+  /* Full height */
+  height: 100%;
+  min-height: 1600px;
+  width: auto;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: repeat-y;
   background-size: cover;
     
 }
@@ -30,7 +49,7 @@ body {
 .bg-text {
   font-weight: bold;
   position: absolute;
-  top: 40%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -38,13 +57,6 @@ body {
   padding: 20px;
   text-align: center;
 }
-  .teste{
-    padding-top: 300px;
-  }
-
-
-
-
 .hero{
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
@@ -108,11 +120,11 @@ body {
   font-weight: bold;
   border: 3px solid #f1f1f1;
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  width: 60%;
+  width: 90%;
   padding: 20px;
   text-align: center;
 }
@@ -233,8 +245,6 @@ body {
 .announce-book{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border: 1px solid black;
-  top: 40%;
-  width: 40% !important;
 }
 .ann-input{
   display: block;
@@ -264,19 +274,17 @@ body {
   padding: 20px;
   text-align: center;
 }
-
-.asdasdx{
-  margin-left: 10px;
-  background-color: lightgray;
-}
-
 .max-size{
   height: 380px;
-  width: 285px;
+  width: 100%;
+  display: block;
 }
 .bottom-liner-2{
   border-bottom:2px solid black;
 }
 .bottom-liner-1{
   border-bottom:1px solid black;
+}
+.max-card-size{
+  height: 566px !important;
 }
